# slider

./: .gitignore  AGENTS.md  README.md  pixi.toml  pyproject.toml
.codex/skills/: README.md
.codex/skills/content-prompts/: SKILL.md
.codex/skills/hello-world/: SKILL.md
.codex/skills/pptx/: SKILL.md  package-lock.json  package.json
.codex/skills/slider-ops/: SKILL.md
.codex/skills/slider-plan/: SKILL.md
.codex/skills/spec-structurer/: SKILL.md
.codex/skills/styled-artifacts/: SKILL.md
.codex/skills/styled-prompts/: SKILL.md
archieve/v1/specs/: README.md
archieve/v1/styles/: README.md
archieve/v1/tests/: test_styles.py
artifacts/: README.md
configs/: README.md  deck.yaml
materials/code-agent-huawei/: README.md  README.original.md
materials/fenjin-award-defense/: source_ppt_pages.md
prompts/: README.md  workflow-prompt.md
prompts/content/: README.md  code-agent-huawei.sample4.md  fenjin-award-defense.md
prompts/styled/: README.md  code-agent-huawei.sample4.chalkboard.md  fenjin-award-defense.md
references/: README.md
specs/: code-agent-huawei.auto.md  example.md
src/slider/: __main__.py  spec.py  style_evolve.py
styles/: README.md  blueprint.toml  bold-editorial.toml  chalkboard.toml  colorful-handdraw.toml  corporate.toml  dark-atmospheric.toml  editorial-infographic.toml  fantasy-animation.toml  intuition-machine.toml  minimal.toml  notion.toml  pixel-art.toml  scientific.toml  sketch-notes.toml  vector-illustration.toml  vintage.toml  watercolor.toml
tests/: test_spec_parser.py  test_spec_structurer.py  test_style_evolve.py
(+39 files in other folders)
